--- a/certificate.yaml
+++ b/certificate.yaml
@@ -1,11 +1,11 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: example-app
-  namespace: default
+  name: app.dev
+  namespace: example-app-dev
 spec:
   dnsNames:
-    - example-app.example.com
+    - app.dev.example.com
   secretName: example-app-tls
   issuerRef:
     name: letsencrypt-cluster-issuer
