changed to clusterissuer

--- a/k8s/cluster-issuer/prod/cluster-issuer.yaml
+++ b/k8s/cluster-issuer/prod/cluster-issuer.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: cert-manager.io/v1
-kind: Issuer
+kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
 spec:
@@ -14,6 +14,6 @@ spec:
       name: letsencrypt-prod
     # Enable the HTTP-01 challenge provider
     solvers:
-    - http01:
-        ingress:
-          class: nginx
+      - http01:
+          ingress:
+            class: nginx
